--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-------------------- SIDEBAR-------------------------------->
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
-                <a href="#">DMS Projects</em></a>
+                <a href="https://elymanzon.github.io/PRC-FRONT-PAGE/">DMS Projects</em></a>
             </div>
             <nav>
                 <ul>
